<resources>
    <string name="app_name">byblos-app</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="or_register">Or Register</string>

    <string name="customer">Customer</string>
    <string name="employee">Employee</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_truck_rental_creator">TruckRentalCreator</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="service_name">Service Name</string>
    <string name="name">Name</string>
    <string name="price">Hourly Rate</string>


</resources>