<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/cancel_register"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="164dp" />

        <EditText
            android:id="@+id/register_phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Phone Number"
            android:textColorHint="@color/black"
            android:inputType="phone" />

        <EditText
            android:id="@+id/register_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:textColorHint="@color/black"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/register_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#B6B3B9"
            android:text="@string/register" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="68dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/customer_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer" />

            <RadioButton
                android:id="@+id/employee_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employee" />
        </RadioGroup>

    </LinearLayout>
</RelativeLayout>

