<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="294dp" />

        <EditText
            android:id="@+id/login_username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#B6B3B9"
            android:text="@string/login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/or_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#B6B3B9"
            android:text="@string/or_register" />

    </LinearLayout>
</RelativeLayout>